# apple_reminder_mcp_server

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  server.py
.github/workflows/: publish.yml  test.yml
tests/: test_server.py
